# ultra-uploader

./: COLAB_GUIDE.md  README.md  ULTRA_COLAB.md  colab_uploader.py  pyproject.toml
ultra_uploader/: cli.py  client.py  uploader.py  utils.py
